welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:15: error: not found: value vuBiscuit
    vuBiscuit=true;
    ^