welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code



def haveBaggle():Boolean = {
  var vuBiscuit=false
  if (vuBiscuit==true) {
    return true;  
  } else {
    return false;
  }
}

for (j<-1 to 6) {
  if (haveBaggle==true) {
    vuBiscuit=true;
  } else {
    avance();
  }
}




 for (k<-1 to 6) {
    recule()
  }

